'use strict';

module.exports = class Renderer {

  constructor() {

  }

  initBatlefield(battlefield) {

  }

  preRender() {

  }

  postRender() {

  }

  renderTank(tank) {

  }

  renderClock(msElapsed, msLimit) {

  }

  renderTankStats(tankList) {

  }

  renderBullet(bullet) {

  }
};
